# edatime

./: .dockerignore  .gitignore  .readthedocs.yaml  .repowise-workspace.yaml  AGENTS.md  ARCHITECTURE_REFACTOR_PLAN.md  CLAUDE.md  Cargo.toml  Dockerfile  Issues.md  Makefile  Modelfile  README.md  SECURITY.md  UI.md  architecture.md  debugging.md  feature_ideas.md  features.md  features_ideas.md  fix.py  frontend_rewrite.md  future_features.md  get_logs.mjs  heatmap-page  implementation_plan.md  improvement_features.md  improvements.md  issues.md  package-lock.json  package.json  profile_upload.sh  result.md  sample.csv  scatter-page-screenshot  temp_query  test_api.mjs  test_api2.mjs  timeseries_debugging.md  tsconfig.json  (+1 more)
.claude/: CLAUDE.md  settings.json
.clinerules/workflows/: performance-audit.md
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: audit.md  copilot-instructions.md  instructions.md  new_feature.md
.github/agents/: feature_implementation_agent.agent.md  performance_audit_agent.agent.md  refactoring_agent.agent.md  rust_refactor.md
.github/workflows/: ci.yml  security.yml
.playwright-mcp/: page-2026-05-10T16-20-48-790Z.yml  page-2026-05-10T16-29-23-405Z.yml  page-2026-05-11T11-34-52-227Z.yml  page-2026-05-11T11-35-07-460Z.yml  page-2026-05-11T11-39-04-577Z.yml  page-2026-05-11T11-42-43-093Z.yml  page-2026-05-11T11-42-54-826Z.yml  page-2026-05-11T11-43-06-735Z.yml  page-2026-05-11T11-43-15-639Z.yml  page-2026-05-11T11-43-22-281Z.yml  page-2026-05-11T11-43-36-072Z.yml  page-2026-05-11T11-43-48-637Z.yml  page-2026-05-11T11-43-54-949Z.yml  page-2026-05-11T12-03-27-951Z.yml  page-2026-05-11T12-09-34-878Z.yml  page-2026-05-11T12-28-42-045Z.yml  page-2026-05-11T12-42-57-915Z.yml  page-2026-05-11T12-55-17-531Z.yml  page-2026-05-11T12-57-05-771Z.yml  page-2026-05-11T12-59-03-429Z.yml  page-2026-05-11T13-02-00-472Z.yml  page-2026-05-11T13-05-37-272Z.yml  page-2026-05-11T13-09-58-824Z.yml  page-2026-05-11T13-14-12-342Z.yml  page-2026-05-11T13-15-13-987Z.yml  page-2026-05-11T13-16-01-520Z.yml  page-2026-05-11T13-18-50-764Z.yml  page-2026-05-11T13-29-10-185Z.yml  page-2026-05-11T13-36-06-300Z.yml  page-2026-05-11T13-46-40-764Z.yml  page-2026-05-11T15-54-15-754Z.yml  page-2026-05-11T15-56-19-163Z.yml  page-2026-05-11T15-56-53-225Z.yml  page-2026-05-11T16-33-19-098Z.yml  page-2026-05-11T16-40-26-205Z.yml  page-2026-05-11T16-40-34-261Z.yml  page-2026-05-11T16-40-43-491Z.yml  page-2026-05-11T16-40-55-466Z.yml  page-2026-05-11T16-41-14-151Z.yml  page-2026-05-11T16-41-26-085Z.yml  (+7 more)
.repowise/: mcp.json  state.json
.serena/: project.yml
benches/: pipeline_bench.rs
crates/edatime-bin/: Cargo.toml
crates/edatime-bin/src/: main.rs
crates/edatime-core/: Cargo.toml
crates/edatime-core/src/: cache.rs  config.rs  error.rs  expr.rs  http.rs  lib.rs  metrics.rs  pipeline.rs  stats.rs  types.rs
crates/edatime-ingest/: Cargo.toml
crates/edatime-ingest/src/: ingest.rs  lib.rs  loader.rs  normalizer.rs  profiler.rs
crates/edatime-query/: Cargo.toml
crates/edatime-query/src/: aggregations.rs  executor.rs  filters.rs  lib.rs  pipeline.rs  predicates.rs  query.rs  transforms.rs  validation.rs
crates/edatime-service/: Cargo.toml
crates/edatime-service/src/: dto.rs  handlers.rs  lib.rs  middleware.rs  rates.rs  router.rs  state.rs
crates/edatime-service/src/analytics/: anomaly.rs  drift.rs  fft.rs  outlier.rs  shared.rs  transform.rs
crates/edatime-service/src/causal/: data.rs  graph.rs  lpcmci.rs  mod.rs  pc.rs  pcmciplus.rs
crates/edatime-service/src/handlers/: mod.rs
crates/edatime-service/src/handlers/routes/: aggregate.rs  analytics.rs  config.rs  data.rs  database.rs  drift.rs  export.rs  metadata.rs  metrics.rs  mod.rs  shared.rs  upload.rs
crates/edatime-service/src/handlers/scatter/: mod.rs
crates/edatime-service/src/handlers/scatter/scatter/: collect.rs  correlations.rs  export.rs  mod.rs  points.rs  sample.rs
crates/edatime-store/: Cargo.toml
crates/edatime-store/src/: arrow_adapter.rs  cache.rs  csv_adapter.rs  db.rs  lib.rs  parquet_adapter.rs  repository.rs  state.rs
docs/: design.md  developer-guide.md  index.md  quickstart.md  requirements.txt  time-series-workflow-pages.md  user-manual.md
docs/_static/: edatime-docs.css  edatime-docs.js
docs/developer/: architecture.md  backend-refactor-2026.md  backend.md  causal-page.md  drift-page.md  fft-page.md  frontend.md  heatmap-page.md  homepage.md  index.md  scatter-page.md  settings-page.md  spectrogram-page.md  timeseries-page.md  upload-page.md  workflows.md
docs/reference/: api.md  configuration.md  index.md
docs/user/: faq.md  index.md  workflows.md
frontend/: .npmrc  REFACTOR_PLAN.md  index.html  package-lock.json  package.json  sw.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/css/: style.css
frontend/js/: Arrow.dom-W4CKWPGY.js  Arrow.dom-W4CKWPGY.js.map  app.js  app.js.map  causalComparison-RWRXQULB.js  causalComparison-VQVLPMA7.js  causalPage-3X6LNDBI.js  causalPage-3X6LNDBI.js.map  causalPage-766IQWQ7.js  causalPage-JCU33NU7.js  causalPage-JCU33NU7.js.map  causalPage-TZS2VRJV.js  causalPage-TZS2VRJV.js.map  causalPage-WC5IUDQ6.js  causalPage-Y3QBAXZW.js  causalPage-Y3QBAXZW.js.map  causalPage-YXZLMPHG.js  causalPage-YXZLMPHG.js.map  causalPage-ZFIKPRRA.js  causalPage-ZFIKPRRA.js.map  chart.js  chunk-26FFPJIT.js  chunk-2MNTF6DE.js  chunk-2MNTF6DE.js.map  chunk-2PTU6DWS.js  chunk-2PTU6DWS.js.map  chunk-37CI75XC.js  chunk-37CI75XC.js.map  chunk-3BFTKZYS.js  chunk-3BFTKZYS.js.map  chunk-44BHGKBD.js  chunk-44BHGKBD.js.map  chunk-46CWFQDH.js  (+130 more)
old/: vite.config.ts
old_frontend/: app.js  timeseries.md
scripts/: build-frontend.mjs  check-frontend.mjs
src/: analytics.rs  arrow_export.rs  cache.rs  config.rs  db.rs  downsample.rs  error.rs  filters.rs  ingest.rs  lib.rs  main.rs  metrics.rs  middleware.rs  pipeline.rs  query.rs  rates.rs  repository.rs  state.rs  stats.rs  temporal.rs  validation.rs
tests/: api_integration.rs  audit_verification.rs  e2e_audit_tests.ts  unit_tests.rs
tmp/: user-guide-fixture.csv
(+580 files in other folders)
