[package]
name = "edatime"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "58.0.0"
arrow-ipc = "58.0.0"
axum = { version = "0.8.8", features = ["multipart"] }
chrono = { version = "0.4.41", features = ["serde"] }
minmaxlttb = "0.1.4"
polars = { version = "0.53.0", features = ["lazy", "temporal", "parquet", "csv", "dtype-datetime", "ipc", "ipc_streaming"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "set-header", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }


