[package]
name = "edatime"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "58.0.0"
arrow-ipc = "58.0.0"
axum = { version = "0.8.8", features = ["multipart"] }
chrono = { version = "0.4.41", features = ["serde"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
minmaxlttb = "0.1.4"
ndarray = { version = "0.16", features = ["rayon"] }
polars = { version = "0.53.0", features = ["lazy", "temporal", "parquet", "csv", "dtype-datetime", "ipc", "ipc_streaming"] }
rand = "0.8"
rayon = "1.10"
rustfft = "6.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
statrs = "0.18"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tower-http = { version = "0.6.8", features = ["cors", "compression-gzip", "fs", "set-header", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
toml = "0.8.23"

[dev-dependencies]
criterion = "0.5.1"
axum-test = "17"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[bench]]
name = "pipeline_bench"
harness = false


