[package]
name = "edatime-bin"
version.workspace = true
edition.workspace = true

[dependencies]
edatime = { path = "../.." }
edatime-core = { path = "../edatime-core" }
edatime-query = { path = "../edatime-query" }
polars.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
toml.workspace = true
tower-http = { workspace = true }
