[package]
name = "edatime-core"
version.workspace = true
edition.workspace = true

[dependencies]
polars.workspace = true
arrow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
chrono.workspace = true
rand.workspace = true
toml.workspace = true
