[package]
name = "edatime-ingest"
version.workspace = true
edition.workspace = true

[dependencies]
edatime-core = { path = "../edatime-core" }
polars.workspace = true
arrow.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
tokio.workspace = true
